--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: relSim
 Title: Relative Simulator
-Version: 0.1-48
-Date: 2014-03-12
+Version: 0.2-0
+Date: 2015-03-28
 Author: James M. Curran
 Maintainer: James M. Curran <j.curran@auckland.ac.nz>
 Description: A set of tools to explore the behaviour statistics used for forensic DNA interpretation when close relatives are involved
 Depends: DNAtools
 License: GPL (>= 2)
-
+Imports: Rcpp (>= 0.11.5)
+LinkingTo: Rcpp
+URL: http://github.com/jmcurran/relSim
+BugReports: http://github.com/jmcurran/relSim/issues
