--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: relSim
-Title: Relative Simulator
-Version: 0.2-0
-Date: 2015-03-28
-Author: James M. Curran
-Maintainer: James M. Curran <j.curran@auckland.ac.nz>
-Description: A set of tools to explore the behaviour statistics used for forensic DNA interpretation when close relatives are involved
-Depends: DNAtools
+Type: Package
+Title: What the package does (short line)
+Version: 1.0
+Date: 2015-03-31
+Author: Your Name
+Maintainer: Your Name <your@email.com>
+Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.11.5)
 LinkingTo: Rcpp
-URL: http://github.com/jmcurran/relSim
-BugReports: http://github.com/jmcurran/relSim/issues
