--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: relSim
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
-Date: 2015-03-31
-Author: Your Name
-Maintainer: Your Name <your@email.com>
-Description: More about what it does (maybe more than one line)
+Title: Relative Simulator
+Version: 0.2-0
+Date: 2015-04-03
+Author: James M. Curran
+Maintainer: James M. Curran <j.curran@auckland.ac.nz>
+Description: A set of tools to explore the behaviour statistics used for forensic DNA interpretation when close relatives are involved. The package also offers some useful tools for exploring other forensic DNA situations.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.11.5)
 LinkingTo: Rcpp
