--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,29 @@
 useDynLib(relSim)
-exportPattern("^[[:alpha:]]+")
+export(breedFst)
+export(calcFst)
+export(checkFreqs)
+export(ep)
+export(errorRate)
+export(exclusionPower)
+export(fetchBMdata)
+export(IBS)
+export(locusIBS)
+export(lrMix)
+export(lrPC)
+export(lrSib)
+export(lrSibDebug)
+export(normalizeFreqs)
+export(randomChild)
+export(randomPCPairs)
+export(randomProfile)
+export(randomProfilePairs)
+export(randomSample)
+export(randomSib)
+export(randomSibPairs)
+export(readFreqs)
+export(readResults)
+export(sim)
+export(toNexus)
+S3method(print, population)
+S3method(print, profile)
 importFrom(Rcpp, evalCpp)
