--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,13 +17,16 @@ export(randomChild)
 export(randomPCPairs)
 export(randomProfile)
 export(randomProfilePairs)
+export(randomProfiles)
 export(randomSample)
 export(randomSib)
 export(randomSibPairs)
 export(readFreqs)
 export(readResults)
 export(sim)
+export(simNpersonMixture)
 export(toNexus)
+S3method(print, npmresult)
 S3method(print, population)
 S3method(print, profile)
 importFrom(Rcpp, evalCpp)
