--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(errorRate)
 export(exclusionPower)
 export(fetchBMdata)
 export(IBS)
+export(IS)
 export(locusIBS)
 export(lrMix)
 export(lrPC)
