--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,8 @@ export(exclusionPower)
 export(fetchBMdata)
 export(IBS)
 export(IS)
-export(ISprobs)
+export(ISW)
+export(ISprob)
 export(locusIBS)
 export(lrMix)
 export(lrPC)
