--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,4 @@ Description: A set of tools to explore the behaviour statistics used for forensi
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.11.5)
 LinkingTo: Rcpp
+RoxygenNote: 6.0.1
