--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,7 @@ export(readResults)
 export(sim)
 export(simNpersonMixture)
 export(toNexus)
+importFrom(multicool,allPerm)
+importFrom(multicool,initMC)
+importFrom(utils,txtProgressBar)
 useDynLib(relSim)
