--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,12 @@ Package: relSim
 Type: Package
 Title: Relative Simulator
 Version: 0.2-2
-Date: 2017-09-17
+Date: 2017-09-22
 Author: James M. Curran
 Maintainer: James M. Curran <j.curran@auckland.ac.nz>
 Description: A set of tools to explore the behaviour statistics used for forensic DNA interpretation when close relatives are involved. The package also offers some useful tools for exploring other forensic DNA situations.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.8), stats, graphics, xtable, multicool
 LinkingTo: Rcpp
+LazyData: true
 RoxygenNote: 6.0.1
