Working, but "fudge" still exists. Need to discuss with Maarten

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(readFreqs)
 export(readResults)
 export(sim)
 export(simNpersonMixture)
+export(testIS)
 export(toNexus)
 importFrom(multicool,allPerm)
 importFrom(multicool,initMC)
