--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(randomSample)
 export(randomSib)
 export(randomSibPairs)
 export(readFreqs)
+export(readProfiles)
 export(readResults)
 export(sim)
 export(simNpersonMixture)
