--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calcFst)
 export(checkFreqs)
 export(errorRate)
 export(exclusionPower)
+export(famSearch)
 export(fetchBMdata)
 export(locusIBS)
 export(lrMix)
