Still trying to max this CRAN happy. NOTE NOTE NOTE: A lot of the fixes are changes are calls to RandomProfiles when .RandomProfiles is the desired behaviour. I really should find out why this is.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(IS)
 export(breedFst)
 export(calcFst)
 export(checkFreqs)
+export(ep)
 export(errorRate)
 export(exclusionPower)
 export(famSearch)
