--- a/relSim.Rcheck/relSim/DESCRIPTION
+++ b/relSim.Rcheck/relSim/DESCRIPTION
@@ -13,5 +13,6 @@ LazyData: true
 RoxygenNote: 6.0.1
 SystemRequirements: C++11
 NeedsCompilation: yes
-Packaged: 2017-12-18 20:54:58 UTC; jcur002
-Built: R 3.4.3; x86_64-apple-darwin15.6.0; 2017-12-18 20:55:40 UTC; unix
+Packaged: 2017-12-26 01:52:39 UTC; jcur002
+Built: R 3.4.3; x86_64-w64-mingw32; 2017-12-26 01:53:42 UTC; windows
+Archs: i386, x64
