--- a/relSim.Rcheck/relSim/DESCRIPTION
+++ b/relSim.Rcheck/relSim/DESCRIPTION
@@ -14,3 +14,4 @@ RoxygenNote: 6.0.1
 SystemRequirements: C++11
 NeedsCompilation: yes
 Packaged: 2017-12-26 23:52:35 UTC; jcur002
+Built: R 3.4.3; x86_64-apple-darwin15.6.0; 2017-12-26 23:53:28 UTC; unix
