--- a/src/DESCRIPTION
+++ b/src/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: relSim
 Type: Package
 Title: Relative Simulator
-Version: 0.2-8
-Date: 2017-12-27
+Version: 0.2-9
+Date: 2018-01-05
 Author: James M. Curran
 Maintainer: James M. Curran <j.curran@auckland.ac.nz>
 Description: A set of tools to explore the behaviour statistics used for forensic DNA interpretation when close relatives are involved. The package also offers some useful tools for exploring other forensic DNA situations.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.8), stats, graphics, xtable, multicool, utils
+Depends: R (>= 2.10)
 LinkingTo: Rcpp
 LazyData: true
 RoxygenNote: 6.0.1
