pre CRAN checks

--- a/relSim/NAMESPACE
+++ b/relSim/NAMESPACE
@@ -35,6 +35,7 @@ export(writePop)
 importFrom(graphics,barplot)
 importFrom(graphics,box)
 importFrom(graphics,boxplot)
+importFrom(methods,is)
 importFrom(multicool,allPerm)
 importFrom(multicool,initMC)
 importFrom(rvest,html_nodes)
