--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: relSim
 Type: Package
 Title: Relative Simulator
-Version: 0.3-4
+Version: 0.3.5
 Date: 2022-09-23
 Author: James M. Curran
 Maintainer: James M. Curran <j.curran@auckland.ac.nz>
